--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^17.2.0"
+    "globals": "^17.2.0",
+    "typescript-eslint": "^8.54.0"
   }
 }
